--- a/styles/main.css
+++ b/styles/main.css
@@ -4,4 +4,17 @@ body {
 .container-fluid {
   padding: 0; }
 
+#stats {
+  width: 140px !important; }
+
+#fpsText {
+  font-size: 16px !important; }
+
+.console {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 80px;
+  color: red; }
+
 /*# sourceMappingURL=main.css.map */
