--- a/styles/src/main.scss
+++ b/styles/src/main.scss
@@ -5,3 +5,19 @@ body {
 .container-fluid {
 	padding:0;
 }
+
+#stats {
+	width: 140px !important;
+}
+#fpsText {
+	font-size:16px !important;
+}
+
+.console {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	font-size: 80px;
+	color:red;
+	//display:none;
+}
